--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
+body {
+  background: url(/candybg.jpeg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .grid {
   height: 560px;
   width: 560px;
   display: flex;
   flex-wrap: wrap;
+  backdrop-filter: blur(5px);
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px #000;
 }
 
 .grid div {
